--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-material-calendar": "^0.2.14",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.0.7",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
