--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && node ./bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,10 +27,15 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "angular-calendar": "^0.23.6",
     "angular-material-calendar": "^0.2.14",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
-    "mongoose": "^5.0.7",
+    "mongoose": "^5.0.9",
+    "morgan": "^1.9.0",
     "rxjs": "^5.5.2",
+    "serve-favicon": "^2.4.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
