--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "curl": "^0.1.4",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.0.9",
