--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "angular-calendar": "^0.23.6",
     "angular-material-calendar": "^0.2.14",
+    "angular2-jwt": "^0.2.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
