--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "curl": "^0.1.4",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.2",
