--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.2",
